--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ li {margin-top: 10px;}
 	height: 100%;
 }
 
-.header {
+header {
 	display: block;
 	background: #1a1d21;
 	color: #fff;
@@ -18,7 +18,7 @@ li {margin-top: 10px;}
 	height: 200px;
 }
 
-.menu {
+nav {
 	display: block;
 	background: #003057;
 	float: left;
