changed header to black

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ li {margin-top: 10px;}
 
 header {
 	display: block;
-	background: #1a1d21;
+	background: black;
 	color: #fff;
 	float: left;
 	width: 100%;
