changed nav height

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ li {margin-top: 10px;}
 header {
 	display: block;
 	background: black;
-	color: #fff;
+	color: white;
 	float: left;
 	width: 100%;
 	height: 200px;
@@ -23,7 +23,7 @@ nav {
 	background: #003057;
 	float: left;
 	width: 11%;
-	height: 833px;
+	height: 100%;
 }
 
 .menuTu {
@@ -55,7 +55,7 @@ main {
 	height: 100%;
 }
 
-.footer{
+footer{
 	display: block;
 	float: right;
 	width: 89%;
@@ -63,9 +63,9 @@ main {
 	background-color: #787878;
 }
 
-.main div{vertical-align: middle;}
+main div{vertical-align: middle;}
 
-.footer div {text-align: left;}
+footer div {text-align: left;}
 
 #helpcolumn1 {width: 732.5px;}
 #helpcolumn2 {width: 732.5px;}
