--- a/styles.css
+++ b/styles.css
@@ -76,9 +76,8 @@ footer div {text-align: left;}
 .logo{
 	display: block;
 	float: left;
-	width: 15%;
-	height: 100%;
-	line-height: 28px;
+	width: 180px;
+	height: 180px;
 	padding-left: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
