--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ h1{
 
 .container {
 	display: grid;
-	grid-template-columns: 100px 150px 200px;
+	grid-template-columns: 100% 100% 100%;
 	text-align: center;
 }
 
