--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ h1{
 
 .container {
 	display: grid;
-	grid-template-columns: 300px 300px;
+	grid-template-columns: 150px 350px 500px;
 	text-align: center;
 }
 
